# VibeSim

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/components/: Button.cpp  Button.hpp  Components.hpp  DropList.cpp  DropList.hpp  InteractiveElement.cpp  InteractiveElement.hpp  NumericInput.cpp  NumericInput.hpp  TitleBar.cpp  TitleBar.hpp  WidgetPanel.cpp  WidgetPanel.hpp
src/simulation/: Collisions.cpp  Collisions.hpp  Individual.cpp  Individual.hpp  Obstacles.cpp  Obstacles.hpp  Population.cpp  Population.hpp  Simulation.hpp  Space.cpp  Space.hpp
src/styles/: Theme.cpp  Theme.hpp
src/utils/: ColorUtils.cpp  ColorUtils.hpp
